<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="@color/pinkLight">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout3"
        android:layout_width="356dp"
        android:layout_height="228dp"
        android:layout_margin="5dp"
        android:background="@drawable/shape_retangulo_activity2"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="16dp">

        <ImageView
            android:id="@+id/img_usuario"
            android:layout_width="66dp"
            android:layout_height="63dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/shape_rectangle"
            android:src="@drawable/pessoa"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/text_nome"
            android:layout_width="213dp"
            android:layout_height="28dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:text="@string/txt_bem_vindo"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/img_usuario"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/txt_recados"
            android:layout_width="42dp"
            android:layout_height="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/txt_recados"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="9dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/img_usuario"
            app:layout_constraintTop_toBottomOf="@+id/text_nome" />

        <ImageButton
            android:id="@+id/btn_recados"
            android:layout_width="24dp"
            android:layout_height="22dp"
            android:layout_marginStart="96dp"
            android:src="@drawable/edit_note"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_recados" />

        <TextView
            android:id="@+id/txt_fotos"
            android:layout_width="42dp"
            android:layout_height="15dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/txt_fotos"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="9dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/txt_recados"
            app:layout_constraintTop_toBottomOf="@+id/text_nome" />

        <ImageButton
            android:id="@+id/btn_fotos"
            android:layout_width="24dp"
            android:layout_height="22dp"
            android:layout_marginStart="32dp"
            android:src="@drawable/photo"
            app:layout_constraintStart_toEndOf="@+id/btn_recados"
            app:layout_constraintTop_toBottomOf="@+id/txt_fotos" />

        <TextView
            android:id="@+id/txt_fas"
            android:layout_width="42dp"
            android:layout_height="15dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/txt_fas"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="9dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/txt_fotos"
            app:layout_constraintTop_toBottomOf="@+id/text_nome" />

        <ImageButton
            android:id="@+id/btn_mensagens"
            android:layout_width="24dp"
            android:layout_height="22dp"
            android:layout_marginStart="36dp"
            android:src="@drawable/mail"
            app:layout_constraintStart_toEndOf="@+id/btn_fas"
            app:layout_constraintTop_toBottomOf="@+id/txt_mensagens" />


        <TextView
            android:id="@+id/txt_mensagens"
            android:layout_width="58dp"
            android:layout_height="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/txt_mensagens"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="9dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toEndOf="@+id/txt_fas"
            app:layout_constraintTop_toBottomOf="@+id/text_nome" />

        <ImageButton
            android:id="@+id/btn_fas"
            android:layout_width="24dp"
            android:layout_height="22dp"
            android:layout_marginStart="36dp"
            android:src="@drawable/star"
            app:layout_constraintStart_toEndOf="@+id/btn_fotos"
            app:layout_constraintTop_toBottomOf="@+id/txt_fas" />

        <TextView
            android:id="@+id/txt_quant_visualizacao"
            android:layout_width="113dp"
            android:layout_height="14dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/txt_visualizacoes_perfil"
            android:textColor="@color/black"
            android:textSize="9sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_recados" />

        <TextView
            android:id="@+id/txt_visualizacoes"
            android:layout_width="211dp"
            android:layout_height="17dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="24dp"
            android:paddingTop="5dp"
            android:text="@string/txt_dados_visitas"
            android:textColor="@color/black"
            android:textSize="9dp"
            app:layout_constraintStart_toEndOf="@+id/txt_quant_visualizacao"
            app:layout_constraintTop_toBottomOf="@+id/btn_recados" />

        <TextView
            android:id="@+id/txt_visualizacoes_recentes"
            android:layout_width="100dp"
            android:layout_height="11dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:text="@string/txt_visualizacoes_recentes"
            android:textColor="@color/black"
            android:textSize="9sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_quant_visualizacao" />

        <TextView
            android:id="@+id/txt_visitantes"
            android:layout_width="211dp"
            android:layout_height="17dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:paddingTop="5dp"
            android:text="@string/txt_visitantes"
            android:textColor="@color/deepPink"
            android:textSize="9dp"
            app:layout_constraintStart_toEndOf="@+id/txt_visualizacoes_recentes"
            app:layout_constraintTop_toBottomOf="@+id/txt_visualizacoes" />

        <TextView
            android:id="@+id/txt_sorte"
            android:layout_width="79dp"
            android:layout_height="17dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:paddingTop="5dp"
            android:text="Sua sorte de Hoje:"
            android:textColor="@color/black"
            android:textSize="9sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_visualizacoes_recentes" />

        <TextView
            android:id="@+id/txt_mgs_sorte"
            android:layout_width="211dp"
            android:layout_height="17dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:paddingTop="5dp"
            android:text="@string/txt_msg_sorte"
            android:textColor="@color/black"
            android:textSize="9dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_sorte"
            app:layout_constraintTop_toBottomOf="@+id/txt_visitantes"
            app:layout_constraintVertical_bias="0.214" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="358dp"
        android:layout_height="125dp"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout3">


        <TextView
            android:id="@+id/txt_pedidos_amizade"
            android:layout_width="177dp"
            android:layout_height="21dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="16dp"
            android:text="@string/txt_pedidos_amizade"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/txt_quant_pedidos_amizade"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:text="(1)"
            android:textColor="@color/deepPink"
            android:textSize="14dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/txt_pedidos_amizade"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_pedido"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/shape_rectangle"
            android:src="@drawable/pessoa2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_pedidos_amizade"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/txt_aceita_amizade"
            android:layout_width="134dp"
            android:layout_height="21dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="12dp"
            android:text="Ciclana"
            android:textColor="@color/deepPink"
            android:textSize="13dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/img_pedido"
            app:layout_constraintTop_toBottomOf="@+id/txt_pedidos_amizade"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/txt_amigos_name"
            android:layout_width="235dp"
            android:layout_height="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:text="Cilcana é seu(sua/sues) amigo(a/es)?"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/img_pedido"
            app:layout_constraintTop_toBottomOf="@+id/txt_aceita_amizade"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn_aceita_sim"
            android:layout_width="45dp"
            android:layout_height="20dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="0dp"
            android:background="@color/deepPink"
            android:text="@string/btn_aceita_sim"
            android:textColor="@color/white"
            android:textSize="9sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/img_pedido"
            app:layout_constraintTop_toBottomOf="@+id/txt_amigos_name" />

        <Button
            android:id="@+id/btn_aceita_nao"
            android:layout_width="45dp"
            android:layout_height="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="0dp"
            android:background="@color/deepPink"
            android:text="@string/btn_nao_aceita"
            android:textColor="@color/white"
            android:textSize="9sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.397"
            app:layout_constraintStart_toEndOf="@+id/btn_aceita_sim"
            app:layout_constraintTop_toBottomOf="@+id/txt_amigos_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout4"
        android:layout_width="362dp"
        android:layout_height="146dp"
        android:layout_margin="5dp"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.108"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/txt_amigos"
            android:layout_width="94dp"
            android:layout_height="24dp"
            android:layout_marginStart="108dp"
            android:layout_marginTop="16dp"
            android:text="Meus Amigos"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_quant_amigos"
            android:layout_width="98dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:text="(3)"
            android:textColor="@color/deepPink"
            android:textSize="14dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/txt_amigos"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_amigo1"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_rectangle"
            android:src="@drawable/pessoa"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_amigos" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="71dp"
            android:layout_height="19dp"
            android:layout_marginStart="16dp"
            android:text="Amigo 1 (3)"
            android:textColor="@color/deepPink"
            android:textSize="9sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_amigo1" />

        <ImageView
            android:id="@+id/img_amigo2"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_rectangle"
            android:src="@drawable/pessoa2"
            app:layout_constraintStart_toEndOf="@+id/img_amigo1"
            app:layout_constraintTop_toBottomOf="@+id/txt_amigos" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="71dp"
            android:layout_height="19dp"
            android:layout_marginStart="52dp"
            android:text="Amigo 2 (7)"
            android:textColor="@color/deepPink"
            android:textSize="9sp"
            app:layout_constraintStart_toEndOf="@+id/textView1"
            app:layout_constraintTop_toBottomOf="@+id/img_amigo2" />

        <ImageView
            android:id="@+id/img_amigo3"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_rectangle"
            android:src="@drawable/pessoa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toEndOf="@+id/img_amigo2"
            app:layout_constraintTop_toBottomOf="@+id/txt_amigos" />

        <TextView
            android:id="@+id/txt_amigo3"
            android:layout_width="71dp"
            android:layout_height="19dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="0dp"
            android:text="Amigo 3 (5)"
            android:textColor="@color/deepPink"
            android:textSize="9sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/img_amigo3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>